	Use `byte-compile-warning-types'.  Add docstring.

2008-03-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* smerge-mode.el (smerge-apply-resolution-patch): New fun.
	(smerge-resolve): Add various resolution heuristics.

	* smerge-mode.el (smerge-refine): Allow highlighting other subparts
	in 3-way conflicts.

2008-03-31  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-bahai.el (calendar-bahai-date-string): Avoid an error for
	pre-Bahai dates.
	(holiday-bahai): Use an algorithm actually relevant to this calendar
	system.

	* calendar/cal-china.el (holiday-chinese-new-year): Doc fix.

	* calendar/cal-islam.el (holiday-islamic): Remove un-needed let.
	Use and.

	* calendar/cal-julian.el (holiday-julian): Fix a problem with holidays
	in the last fortnight in Julian October.

	* calendar/calendar.el (increment-calendar-month): Optionally handle
	systems without 12 months per year.

	(calendar-date-is-visible-p): Doc fix.  Simplify.

	* calendar/holidays.el (holiday-filter-visible-calendar): Return result
	from dolist.

2008-03-30  Juanma Barranquero  <lekktu@gmail.com>

	* hi-lock.el (hi-lock-mode): Fix typos in docstring.
	(hi-lock-unload-function): New function.

2008-03-30  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-do-copy-or-rename-file): Fix check for
	overwriting when NEWNAME is a local file.

	* net/trampver.el: Update release number.

2008-03-30  Alexandre Julliard  <julliard@winehq.org>

	* vc-git.el: Make vc-status display information about copies,
	renames and permission changes.
	(vc-git-extra-fileinfo): New defstruct.
	(vc-git-escape-file-name, vc-git-file-type-as-string)
	(vc-git-rename-as-string, vc-git-permissions-as-string)
	(vc-git-status-printer): New functions.
	(vc-git-after-dir-status-stage2): Also return vc-git-extra-fileinfo.
	(vc-git-after-dir-status-stage1): Look for copies, renames and
	permission changes.
	(vc-git-after-dir-status-stage1-empty-db): Set permissions.